# lz4-java-wrc

./: .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: arguments.rs  command.rs  main.rs  read_counter.rs
src/: common.rs  compression.rs  lib.rs  lz4_block_header.rs  lz4_block_input.rs  lz4_block_output.rs
