[package]
name = "lz4-java-wrc"
version = "0.2.0"
edition = "2021"
authors = ["lordpipe <lordofpipes@protonmail.com>", "Alexandre Blazart <alexandre@blazart.fr>"]
readme = "README.md"
license = "MIT"
keywords = ["lz4"]
categories = ["compression"]
repository = "https://github.com/lordofpipes/lz4-java-wrc"
homepage = "https://github.com/lordofpipes/lz4-java-wrc"
description = """
A fork of `lz4jb` to ensure it gives back access to the underlying writer (wrc = "write continue")

`lz4jb` is a Rust implementation of the LZ4BlockOutputStream format from https://github.com/lz4/lz4-java.

This is not compatible with the standard LZ4 Block format, and is useful for reading Minecraft region files.
"""

[features]
default = ["use_lz4_flex"]
use_lz4_flex = ["lz4_flex"]
use_lz4-sys = ["lz4-sys", "libc"]

[dependencies]
lz4_flex = { version = "0.11", optional = true, default-features = false, features = ["std", "safe-encode", "safe-decode"] }
lz4-sys = { version = "1.9", optional = true }
libc = { version = "0.2", optional = true }
twox-hash = { version = "1.6", default-features = false }
